--- a/src/index.html
+++ b/src/index.html
@@ -12,11 +12,5 @@
     />
     <link rel="shortcut icon" href="./4geeks.ico" />
   </head>
-  <body>
-    <div class="container-fluid text-start">
-      <h1 class="mt-5">Dominios:</h1>
-      <h3><p id="dominios">thegreatjogger.com</p></h3>
-      </div>
-    </div>
-  </body>
+  <body></body>
 </html>
